deployment/base/maas-discovery/networking/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maas-discovery-route
spec:
  parentRefs:
    - name: data-science-gateway
      namespace: openshift-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/tenants
      backendRefs:
        - name: maas-discovery
          port: 8443
          weight: 100
